added debug mode instructions